# remind-me

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
installer/: universal.nsi
scripts/: generate-sounds.mjs  generate-third-party-licenses.mjs
src/: App.tsx  SettingsDialog.tsx  UpdateDialog.tsx  drag.ts  icons.tsx  reminderApi.ts  settings.ts  soundApi.ts  styles.css  time.ts  types.ts  updateApi.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: drag.test.ts  time.test.ts
