[package]
name = "remind-me"
version = "1.2.0"
description = "A fast, lightweight reminder app for Windows"
authors = ["Fishcake Software"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "remind_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atomic-write-file = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = { version = "2.10", default-features = false, features = ["native-tls", "zip"] }
uuid = { version = "1", features = ["v4", "serde"] }
